# skm-calculus

./: .editorconfig  .gitignore  DlangLean.lean  LICENSE  Main.lean  Notes.org  PaperDraft.org  README.md  README.org  README.tex  README.tex.tex  SkLean.lean  Slides.org  bibliography.bib  flake.nix  lake-manifest.json  lakefile.toml
DlangLean/: CoC.lean  Logic.lean  Parser.lean  Semantics.lean  Sk.lean  SkMeta.lean  Stlc.lean  SystemF.lean
SkLean/: ArrowDef.lean  Ast.lean  Ast2.lean  Ast3.lean  Candidates.lean  Candidates2.lean  Checker.lean  CocLcExplainer.lean  CocToSkm.lean  DependentExamples.lean  Dsl.lean  Eval.lean  EvalTactic.lean  KTyping.lean  Lc.lean  LcSkmEta.lean  LcSkmEtaUntyped.lean  MetaTy.lean  Preservation.lean  Proof.lean  SKM3Proto.lean  Sk.lean  SkRaw.lean  SkUniverses.lean  SkmOverview.lean  Sn.lean  Sn2.lean  SnLc.lean  SnProofHard.lean  TODO.org  ToSk.lean  Typing.lean  Typing2.lean  Typing3.lean
cli/: README.md  hie.yaml  package.yaml  skm.cabal
cli/app/: Main.hs
cli/app/Cli/: Exec.hs  OptParse.hs  Repl.hs
cli/src/: ProofGen.hs  Skm.hs  eval.rs
cli/src/Skm/: Ast.hs  Compiler.hs  Eval.hs  Parse.hs  Std.hs  Typecheck.hs  Vm.hs
cli/src/Skm/Cli/: Exec.hs  OptParse.hs  Repl.hs
cli/src/Skm/Compiler/: Ast.hs  Parse.hs  ProofGen.hs  Translate.hs
cli/src/Skm/Util/: Parsing.hs
cli/test/: Main.hs  Spec.hs
examples/: church.coc  church.skm  example_tuple.skm  examplesk.skm  identity.coc  identity.skm  identity_t.skm  identitylc.skm  omega.skm  simple.skm  tuple.skm
formal/: Main.lean  SkLean.lean  lake-manifest.json  lakefile.toml
(+43 files in other folders)
