cabal-version: 3.0
name: skm
version: 0.1.0.0
synopsis: Tool for the SKM language
license: MIT
author: Alexandra Zaldivar Aiello
category: Language
build-type: Simple

library:
  exposed-modules: Skm
  hs-source-dirs: src
  build-depends: base >=4.14 && <5
  default-language: Haskell2010

executable skm-cli
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: base, skm
  default-language: Haskell2010
